@@ -1,3 +1,8 @@
+2008-02-15  Hidehisa Akiyama  <akky@users.sourceforge.jp>
+
+	* src/smonitor_dev.C:
+	- fixed players' number position in the v.1 protocl.
+
 2008-02-10  Hidehisa Akiyama  <akky@users.sourceforge.jp>
 
 	* NEWS:
